--- a/chatbot.html
+++ b/chatbot.html
@@ -3,30 +3,30 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sports Chatbot</title>
+<title>Health-Ed-Pro Chatbot</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
-<link rel="stylesheet" href="chatbot.css">
+<link rel="stylesheet" href="Assets/css/chatbot.css">
 </head>
 <body>
 <header class="header">
-    <h1 class="title"> Your Sports Companion</h1>
+    <h1 class="title">Mental Health companion</h1>
     <p class="subtitle">How can I help you today?</p>
 
     <ul class="suggestion-list">
     <li class="suggestion">
-        <h4 class="text">Welcome to Sports ,How can i assis you to start your Sports journey</h4>
+        <h4 class="text">Welcome to Health Ed pro ,How can i assis you to start your mental health journey</h4>
         <span class="icon material-symbols-rounded">draw</span>
     </li>
     <li class="suggestion">
-        <h4 class="text">Are you looking for tips on managing your games and sports event?</h4>
+        <h4 class="text">Are you looking for tips on managing stress and anxiety?</h4>
         <span class="icon material-symbols-rounded">lightbulb</span>
     </li>
     <li class="suggestion">
-        <h4 class="text">Start Your Sports Journey with Sports</h4>
+        <h4 class="text">Have you noticed any triggers that seems to worsen your mental health?</h4>
         <span class="icon material-symbols-rounded">explore</span>
     </li>
     <li class="suggestion">
-        <h4 class="text">How can we better support you in managing your sports journey?</h4>
+        <h4 class="text">How can we better support you in managing your mental health?</h4>
         <span class="icon material-symbols-rounded">code</span>
     </li>
     </ul>
@@ -50,6 +50,6 @@
     </p>
 </div>
 
-<script src="chatbot.js"></script>
+<script src="Assets/js/script.js"></script>
 </body>
 </html>
