--- a/blog.html
+++ b/blog.html
@@ -111,7 +111,7 @@
         <div style="font-size: 48px;">🖊️</div>
         <h3>Share Your Story</h3>
         <p>Have a unique perspective or exciting experience to share? Create your own blog post and inspire others!</p>
-        <button onclick="alert('Redirect to /CreateBlog')">+ Create New Post</button>
+        <button> Create New Post</button>
       </div>
     </div>
   </div>
