--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
     }
 
     nav {
-      background: #facc15; /* yellow-400 */
+      background: #facc15; 
       padding: 1rem;
       display: flex;
       align-items: center;
