--- a/blog.html
+++ b/blog.html
@@ -120,16 +120,16 @@
     const posts = [
       {
         _id: '1',
-        title: 'Learning JavaScript Basics',
-        description: 'Understand the fundamentals of JavaScript...',
-        content: 'This is the full content of the JavaScript basics post.',
+        title: 'basics',
+        description: '',
+        content: '',
         image: ''
       },
       {
         _id: '2',
-        title: 'React vs Vue: A Comparison',
-        description: 'A deep dive into the differences between React and Vue...',
-        content: 'React and Vue are both great. Here’s how they compare...',
+        title: 'Comparison',
+        description: '',
+        content: '',
         image: ''
       }
     ];
