--- a/blog.html
+++ b/blog.html
@@ -127,7 +127,7 @@
       },
       {
         _id: '2',
-        title: 'Comparison',
+        title: 'basics',
         description: '',
         content: '',
         image: ''
